@@ -134,7 +134,7 @@
                         <version>3.8.1</version>
                         <configuration>
                             <compilerArgs>
-                                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                             </compilerArgs>
                             <source>1.9</source>
                             <target>1.9</target>
